[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "tz_logging"
description = "A very small python library used to facilitate easier logging."
authors = [{name = "Matthew Craig", email = "taggedzi.mpc@gmail.com"}]
license = "MIT"
dependencies = []
readme = "README.md"

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "node-and-timestamp"
write_to = "tz_logging/_version.py"
