[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "tz_logging"
dynamic = ["version"]  # Tell setuptools that version is dynamically generated
description = "A very small python library used to facilitate easier logging."
authors = [{name = "Matthew Craig", email = "taggedzi.mpc@gmail.com"}]
license = {file = "LICENSE"}
dependencies = []
readme = "README.md"

[tool.setuptools_scm]
write_to = "tz_logging/_version.py"
version_scheme = "release-branch-semver"
local_scheme = "no-local-version"
